# rendra

./: Cargo.toml  LICENSE  README.md
examples/: clear_screen.rs  cube.rs
src/: common.rs  error.rs  lib.rs  raw.rs  render3d.rs  renderer.rs
src/common/: color.rs  device.rs  error.rs  layouts.rs  raw.rs  renderer.rs  surface.rs  texture.rs
src/render3d/: draw.rs  material.rs  mesh.rs  shader.rs  unlit.wgsl  viewport.rs
